# citeseek

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
citeseek/: __init__.py  cli.py  config.py  db.py  engine.py  mcp_server.py  models.py  translate.py
citeseek/api/: app.py  routes.py
citeseek/fetch/: fulltext.py  html_parser.py  pdf_parser.py
citeseek/llm/: __init__.py  anthropic_client.py  base.py  openai_compat.py  registry.py
citeseek/pipeline/: chunking.py  citations.py  dedup.py  embeddings.py  evidence.py  index.py  judge.py  query_gen.py  rank.py  store.py
citeseek/session/: chat.py  export.py  store.py
citeseek/sources/: __init__.py  arxiv.py  base.py  openalex.py  ratelimit.py  semantic_scholar.py
eval/: benchmark.jsonl  embedder_ablation.py  failure_analysis.md  failure_analysis.py  results-cite.md  results-embedder.md  results-judge-gemini.md  results-judge-gpt.md  results.md  run_eval.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: smoke.mjs
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  sse.ts  types.ts
frontend/src/components/chat/: ChatPanel.tsx
frontend/src/components/dialogs/: SettingsDialog.tsx  TranslatePanel.tsx
frontend/src/components/layout/: TopBar.tsx  (+4 more)
frontend/src/hooks/: useTheme.ts
frontend/src/stores/: workbench.ts
frontend/src/styles/: globals.css
integration/: screenshot_von.mjs  seed_scholarly_ontology.py  von_citeseek_bridge.py
tests/: test_chunking.py  test_citations.py  test_dedup.py  test_llm.py  test_sources.py  test_store.py
(+9 files in other folders)
